--- a/resources/sass/frontend/_news.scss
+++ b/resources/sass/frontend/_news.scss
@@ -1,18 +1,58 @@
 #news {
     width: 100%;
-    height: 720px;
+    min-width: $web-min-width;
+    // height: 720px;
     color: $brown;
     background-color: $darkwhite;
+    // @media (max-width: 991px) {
+    //     height: 650px;
+    // }
+    // @media (max-width: 767px) {
+    //     height: 700px;
+    // }
+    // @media (max-width: 479px) {
+    //     height: 630px;
+    // }
+    // @media (max-width: 399px) {
+    //     height: 590px;
+    // }
     .container {
         padding-top: 5%;
         h1 {
             letter-spacing: 20px;
-            font-size: 2.2rem;
+            font-size: 2rem;
             font-weight: bold;
+            @media (max-width: 991px) {
+                font-size: 1.8rem;
+            }
+            @media (max-width: 767px) {
+                font-size: 1.5rem;
+                letter-spacing: 15px;
+            }
+            @media (max-width: 479px) {
+                font-size: 1.2rem;
+                letter-spacing: 9px;
+            }
+            @media (max-width: 429px) {
+                font-size: 1rem;
+                letter-spacing: 5px;
+            }
+            @media (max-width: 399px) {
+                font-size: 1rem;
+                letter-spacing: 0px;
+            }
         }
         .newsTable {
             margin-left: 9%;
-            width: calc(100%-9%);
+            width: 91%;
+            @media (max-width: 575px) {
+                margin-left: 0;
+                width: 100%;
+                padding: 15px 40px;
+            }
+            @media (max-width: 429px) {
+                padding: 15px 5px;
+            }
             .newsRow {
                 background-image: url('../../images/frontend/icons/news_underline.png');
                 background-repeat: no-repeat;
@@ -20,19 +60,55 @@
                 padding-bottom: 10px;
                 margin-bottom: 30px;
                 background-size: 100%;
+                @media (max-width: 767px) {
+                    padding-bottom: 3px;
+                }
                 .newsDate {
                     font-weight: bold;
                     font-size: 1.5rem;
                     letter-spacing: 4px;
+                    @media (max-width: 991px) {
+                        font-size: 1rem;
+                    }
+                    @media (max-width: 767px) {
+                        font-size: 1rem;
+                    }
+                    @media (max-width: 479px) {
+                        font-size: 0.9rem;
+                    }
+                    @media (max-width: 399px) {
+                        font-size: 0.8rem;
+                    }
                 }
                 .newsTitle {
                     font-size: 1.5rem;
                     letter-spacing: 4px;
+                    @media (max-width: 991px) {
+                        font-size: 1.2rem;
+                    }
+                    @media (max-width: 767px) {
+                        font-size: 1.1rem;
+                    }
+                    @media (max-width: 479px) {
+                        font-size: 0.9rem;
+                    }
+                    @media (max-width: 399px) {
+                        font-size: 0.6rem;
+                    }
                 }
                 .readMore {
                     font-size: 1rem;
                     padding-top: 15px;
                     text-align: right;
+                    @media (max-width: 991px) {
+                        font-size: 0.8rem;
+                    }
+                    @media (max-width: 575px) {
+                        padding-top: 0px;
+                    }
+                    @media (max-width: 399px) {
+                        font-size: 0.6rem;
+                    }
                     a {
                         color: $pink;
                     }
@@ -43,6 +119,14 @@
                 font-size: 1.4rem;
                 letter-spacing: 3px;
                 padding-right: 5%;
+                margin-top: 15px;
+                margin-bottom: 25px;
+                @media (max-width: 991px) {
+                    font-size: 1.2rem;
+                }
+                @media (max-width: 479px) {
+                    font-size: 0.9rem;
+                }
                 a {
                     color: $brown;
                 }
@@ -56,6 +140,12 @@
     border-radius: 100px;
     width: 60px;
     display: inline-block;
+    @media (max-width: 991px) {
+        width: 50px;
+    }
+    @media (max-width: 469px) {
+        width: 40px;
+    }
     img {
         width: 100%;
     }
