--- a/resources/sass/frontend/_sidebar.scss
+++ b/resources/sass/frontend/_sidebar.scss
@@ -100,6 +100,8 @@
             }
         }
         #bottomSidebar {
+            width: 100%;
+            min-width: 290px;
             padding: 0;
             margin-top: 10px;
             margin-left: 10%;
