--- a/public/css/frontend/announcements/index.css
+++ b/public/css/frontend/announcements/index.css
@@ -188,7 +188,7 @@
   width: 15%;
   text-align: right;
 }
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .announcement-container .announcement-row .announcement-link .announcement-new-container {
     width: 12%;
     position: relative;
@@ -202,7 +202,7 @@
   border-radius: 40px;
   font-size: 1.2rem;
 }
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .announcement-container .announcement-row .announcement-link .announcement-new-container .announcement-new {
     font-size: 1rem;
     position: absolute;
@@ -218,10 +218,15 @@
   height: 100%;
   margin: 0px 25px 0px 30px;
 }
+@media (max-width: 1199px) {
+  .announcement-container .announcement-row .announcement-link .announcement-info-container {
+    font-size: 1.2rem;
+    position: relative;
+  }
+}
 @media (max-width: 991px) {
   .announcement-container .announcement-row .announcement-link .announcement-info-container {
     font-size: 1rem;
-    position: relative;
   }
 }
 .announcement-container .announcement-row .announcement-link .announcement-info-container .announcement-date {
@@ -229,7 +234,7 @@
   letter-spacing: 3px;
   margin-right: 20px;
 }
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .announcement-container .announcement-row .announcement-link .announcement-info-container .announcement-date {
     position: absolute;
   }
@@ -238,7 +243,7 @@
   display: inline-block;
   letter-spacing: 5px;
 }
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .announcement-container .announcement-row .announcement-link .announcement-info-container .announcement-title {
     top: 25px;
     position: absolute;
@@ -251,7 +256,7 @@
   height: 100%;
   color: #f4ac9e;
 }
-@media (max-width: 991px) {
+@media (max-width: 1199px) {
   .announcement-container .announcement-row .announcement-link .announcement-readmore {
     font-size: 0.8rem;
     position: relative;
