--- a/public/css/frontend/freebooks/index.css
+++ b/public/css/frontend/freebooks/index.css
@@ -184,7 +184,6 @@
   display: inline-block;
   width: calc(100% - 135px);
   border: none;
-  font-weight: bold;
   padding: 0;
   font-size: 1rem;
 }
@@ -220,19 +219,37 @@
 
 .freebook-container .freebook-card {
   width: calc(100%);
+  height: 365px;
   margin-bottom: 40px;
   border: 1px solid #5f6b82;
   border-radius: 10px;
   position: relative;
 }
+@media (max-width: 1199px) {
+  .freebook-container .freebook-card {
+    height: 375px;
+  }
+}
+@media (max-width: 767px) {
+  .freebook-container .freebook-card {
+    height: 305px;
+  }
+}
+@media (max-width: 575px) {
+  .freebook-container .freebook-card {
+    height: 350px;
+  }
+}
 @media (max-width: 429px) {
   .freebook-container .freebook-card {
+    height: 278px;
     border-radius: 8px;
     margin-bottom: 30px;
   }
 }
 @media (max-width: 350px) {
   .freebook-container .freebook-card {
+    height: 192px;
     border-radius: 5px;
     margin-bottom: 15px;
   }
