--- a/resources/sass/frontend/_filter.scss
+++ b/resources/sass/frontend/_filter.scss
@@ -32,7 +32,7 @@
             display: inline-block;
             width: calc(100% - 135px);
             border: none;
-            font-weight: bold;
+            // font-weight: bold;
             padding: 0;
             font-size: 1rem;
         }
