--- a/resources/sass/frontend/freebooks/index.scss
+++ b/resources/sass/frontend/freebooks/index.scss
@@ -16,15 +16,27 @@
 .freebook-container {
     .freebook-card {
         width: calc(100%);
+        height: 365px;
         margin-bottom: 40px;
         border: 1px solid $blue;
         border-radius: 10px;
         position: relative;
+        @media (max-width: 1199px){
+            height: 375px;
+        }
+        @media (max-width: 767px){
+            height: 305px;
+        }
+        @media (max-width: 575px){
+            height: 350px;
+        }
         @media (max-width: 429px){
+            height: 278px;
             border-radius: 8px;
             margin-bottom: 30px;
         }
         @media (max-width: 350px){
+            height: 192px;
             border-radius: 5px;
             margin-bottom: 15px;
         }
